2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_node_lookup_file_name): Don't
	return NULL MIME types, #5241.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_shutdown): Fix cache variable name from last
	commit.

	* src/xdgmime.c: (xdg_mime_unalias_mime_type), (xdg_mime_mime_type_equal):
	* src/xdgmime.h:
	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data):
	Define and use private versions of functions that may lead to an
	xdg_mime_init() call and thus to an invalid cache, and a crash - #6824.
	Thanks to Joe Shaw <joeshaw@novell.com>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_shutdown): Free caches, #7496.
	Thanks to Yevgen Muntyan <muntyan@tamu.edu>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimecache.c: (cache_glob_node_lookup_suffix): Don't return
	MIME types if cache suffix lookup returns empty string, #9544.
	Thanks to Yevgen Muntyan <muntyan@tamu.edu>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Fix issue where
	MIME type was not detected when two MIME types with parent
	relationship match and have equal priority, and child
	was found before parent in cache, #9242.
	Thanks to Tom Parker <freedesktop@tevp.net>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimecache.c: (_xdg_mime_cache_list_mime_parents): Fix
	several problems with this function, #9560. Thanks to Yevgen Muntyan.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimemagic.c: Don't declare errno, fixes build on Dragonfly
	BSD, GNOME #336382.

2006-07-13  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_parse_magic_line):
	Only declare 'i' #if LITTLE_ENDIAN. Partially fixes GNOME #340277.
	Thanks to James Andrewartha.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_insert_text),